--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -33,11 +33,14 @@
     </ul>
     <div>
       <ul class="nav navbar-nav">
-        <li class="nav-item">
+        <li *ngIf="!loggedin()" class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="user/register">Register</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!loggedin()" class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="user/login">Login</a>
+        </li>
+        <li *ngIf="loggedin()" class="nav-item" (click)="onLogout()">
+          <a class="nav-link" routerLinkActive="active" routerLink="user/login">Logout</a>
         </li>
       </ul>
     </div>
