--- a/src/app/property/add-property/add-property.component.html
+++ b/src/app/property/add-property/add-property.component.html
@@ -1,17 +1,17 @@
 <div class="row mb-5">
-  <div class="col-8">
+  <div class="col-8 shadow-lg p-0 bg-white">
     <div class="card">
       <div class="card-header">
         <h3>List your Property</h3>
       </div>
       <div class="card-body">
         <form (ngSubmit)='onSubmit()' #Form="ngForm">
-          <div>
-            <tabset #formTabs>
-              <tab heading="Basic Info">
+          <div class="tab-panel">
+            <tabset class="member-tabset" #formTabs>
+              <tab heading="Basic Info" ngModelGroup="BasicInfo" #BasicInfo="ngModelGroup">
                   <div class="form-group col-12">
                   <p>I want to</p>
-                    <div class="btn-group" btnRadioGroup>
+                    <div class="btn-group" btnRadioGroup ngModel name="SellRent" required>
                       <label class="btn btn-outline-primary mr-2"
                       btnRadio=1 tabindex="0" role="button" name="SellRent">Sell</label>
                       <label class="btn btn-outline-primary"
@@ -21,7 +21,8 @@
 
                   <div class="form-group col-12">
                     <p>BHK</p>
-                      <div class="btn-group" btnRadioGroup>
+                      <div class="btn-group" btnRadioGroup
+                      [(ngModel)]="propertyView.BHK" name="BHK">
                         <label
                         *ngFor="let bhk of ['1','2','3','4']"
                         class="btn btn-outline-primary mr-2"
@@ -33,7 +34,7 @@
                     <div class="form-group col-12">
                       <p>Property Type</p>
                         <div class="btn-group" btnRadioGroup name='propType'
-                        [(ngModel)]="propertyView.Type">
+                        [(ngModel)]="propertyView.PType">
                           <label
                           *ngFor="let ptype of propertyTypes"
                           class="btn btn-outline-primary mr-2"
@@ -45,7 +46,8 @@
 
                       <div class="form-group col-12">
                         <p>Furnishing Type</p>
-                          <div class="btn-group" btnRadioGroup>
+                          <div class="btn-group" btnRadioGroup
+                          [(ngModel)]="propertyView.FType" name="FType">
                             <label
                             *ngFor="let ftype of furnishTypes"
                             class="btn btn-outline-primary mr-2"
@@ -70,12 +72,15 @@
 
                   <div class="form-group col-12">
                     <label>City</label>
-                    <input type="text" class="form-control">
+                    <input type="text"
+                    class="form-control"
+                    [(ngModel)]="propertyView.City"
+                    name="City">
                   </div>
 
                   <div class="form-group col-12">
                       <button type="button" class="btn btn-primary btn-block"
-                      (click)="selectTab(1)">Next</button>
+                      (click)="selectTab(1)" [disabled]="!BasicInfo.valid">Next</button>
                   </div>
               </tab>
 
@@ -98,7 +103,9 @@
 
                   <div class="form-group col-12">
                     <label>Built Area (in Sqr Feet)</label>
-                    <input type="text" class="form-control">
+                    <input type="text"
+                    class="form-control"
+                    [(ngModel)]="propertyView.BuiltArea" name="BuiltArea">
                   </div>
 
                   <div class="form-group col-12">
@@ -232,9 +239,9 @@
   <div class="col-4">
     <div class="card-header">
       <h3>Your Property Preview</h3>
-      <div>
-        <app-property-card [property]="propertyView"></app-property-card>
-      </div>
+    </div>
+    <div class="shadow-lg p-3 bg-white">
+      <app-property-card [property]="propertyView" [hideIcon]="true" hideIcons="true"></app-property-card>
     </div>
   </div>
 </div>
